crates/geko_tests/src/snapshots/geko_tests__sema__sema_2.snap
---
source: crates/geko_tests/src/sema.rs
expression: result
---
sema::continue_outside_loop

  x couldn't use `continue` statement outside of loop.
   ,-[test.geko:2:9]
 1 | 
 2 |         continue
   :         ^^^^|^^^
   :             `-- this `continue` statement is invalid.
 3 |         
   `----
