crates/geko_tests/src/snapshots/geko_tests__sema__sema_3.snap
---
source: crates/geko_tests/src/sema.rs
expression: result
---
parse::unexpected_eof

  x unexpected end of file.
   ,-[test.geko:2:9]
 1 | 
 2 |         return
   :         ^^^|^^
   :            `-- while parsing that...
 3 |         
   `----
